# opentherm-interface

./: CMakeLists.txt  README.md  opentherm-interface.ino  opentherm.cpp  opentherm.h
hardware/: CP_Radial_L10.0mm_D6.0mm_Sideways.kicad_mod  RJ11_4.kicad_mod  d_45degree.dcm  fp-info-cache  fp-lib-table  interface.kicad_pcb  interface.kicad_pcb-bak  interface.pro  interface.sch  interface.sch-bak  sym-lib-table
